Docs: add swagger new api's
