# docs/swagger.yaml
@@ -3,6 +3,8 @@ definitions:
     properties:
       error:
         type: string
+      meta:
+        type: string
     type: object
   auth.LoginResponse:
     properties:
@@ -16,6 +18,18 @@ definitions:
       email:
         type: string
       password:
+        type: string
+    type: object
+  auth.LoginWithPhoneRequest:
+    properties:
+      password:
+        type: string
+      phone:
+        type: string
+    type: object
+  auth.RefreshTokenRequest:
+    properties:
+      refresh_token:
         type: string
     type: object
 info:
@@ -56,6 +70,67 @@ paths:
           schema:
             $ref: '#/definitions/auth.ErrorResponse'
       summary: login a user with Eamil
+      tags:
+      - Auth
+  /login-phone:
+    post:
+      consumes:
+      - application/json
+      description: Login a user with Phone to app and generate a JWT token and a refresh
+        token
+      parameters:
+      - description: Login info
+        in: body
+        name: login
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LoginWithPhoneRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+      summary: Login a user with Phone
+      tags:
+      - Auth
+  /refresh-token:
+    post:
+      consumes:
+      - application/json
+      description: Refresh the JWT token using a valid refresh token
+      parameters:
+      - description: Refresh token
+        in: body
+        name: refresh
+        required: true
+        schema:
+          $ref: '#/definitions/auth.RefreshTokenRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.LoginResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+      summary: Refresh JWT token
       tags:
       - Auth
 securityDefinitions:
